--- a/src/MicroMikeMinimal/sidebarButtonLeft-tabBarAlign.sass
+++ b/src/MicroMikeMinimal/sidebarButtonLeft-tabBarAlign.sass
@@ -1,20 +1,23 @@
 
-:is(.mod-left-split, .workspace-ribbon) .sidebar-toggle-button.mod-left
-	position: absolute
-	position-anchor: --leftSidebarButtonAnchor
-	top: anchor(top)
-	left: anchor(right)
-	z-level: 30
+.tabBarLeftSidebarButton
+	:is(.mod-left-split, .workspace-ribbon) .sidebar-toggle-button.mod-left
+		position: absolute
+		position-anchor: --leftSidebarButtonAnchor
+		top: anchor(top)
+		left: anchor(right)
+		z-level: 30
+		margin-top: var(--dragSpaceHeight)
+		height: var(--sidebarTabHeight)
 
-.mod-left-split
-	anchor-name: --leftSidebarButtonAnchor
+	.mod-left-split
+		anchor-name: --leftSidebarButtonAnchor
 
-.workspace-split.mod-vertical.mod-root .workspace-tabs.mod-top:first-of-type .workspace-tab-header-container
-	margin-left: 40px
+	.workspace-split.mod-vertical.mod-root .workspace-tabs.mod-top:first-of-type .workspace-tab-header-container
+		margin-left: 40px
 
-	& .workspace-tab-header-container-inner
-		padding-left: 0px
-	
-.sidebar-toggle-button.mod-left
-	max-width: 40px
-	background-color: var(--tab-container-background)
+		& .workspace-tab-header-container-inner
+			padding-left: 0px
+		
+	.sidebar-toggle-button.mod-left
+		max-width: 40px
+		background-color: var(--tab-container-background)
