--- a/theme.css
+++ b/theme.css
@@ -1743,10 +1743,17 @@ html .mod-linux.stackTabs .mod-root {
   --frame-right-space: 0px;
 }
 
+html body.is-fullscreen:not(.outsideSidebar_RBA):not(.insideSidebar_RBA) {
+  --rightFrameSetTo: var(--titlebarButtonWidth);
+}
+
 html body.is-fullscreen:is(.mod-windows, .mod-linux):not(.outsideSidebar_RBA):not(.insideSidebar_RBA) .mod-root {
   --frame-right-space: var(--titlebarButtonWidth);
 }
-html body.is-fullscreen:is(.mod-windows, .mod-linux):not(.outsideSidebar_RBA):not(.insideSidebar_RBA) .mod-top-right-space .workspace-tab-header-container-inner {
+html body.is-fullscreen:is(.mod-windows, .mod-linux):not(.outsideSidebar_RBA):not(.insideSidebar_RBA) .mod-root .mod-top-right-space .workspace-tab-header-new-tab {
+  margin-right: var(--titlebarButtonWidth);
+}
+html body.is-fullscreen:is(.mod-windows, .mod-linux):not(.outsideSidebar_RBA):not(.insideSidebar_RBA) .workspace-split:not(.mod-root) .mod-top-right-space .workspace-tab-header-container-inner {
   margin-right: var(--titlebarButtonWidth);
 }
 html body.is-fullscreen:is(.mod-windows, .mod-linux):not(.outsideSidebar_RBA):not(.insideSidebar_RBA) .sidebar-toggle-button.mod-right {
@@ -2415,16 +2422,24 @@ body:not(.pane-relief-disable-counts) .view-header-nav-buttons :is(button.clicka
 }
 
 #quick-explorer {
+  height: 100%;
   padding: 0px;
   margin: 0px;
   gap: 0px;
 }
 #quick-explorer span {
-  font-size: 24px;
+  height: 100%;
   padding-bottom: 3px;
   padding-top: 3px;
   padding-left: 3px;
   padding-right: 3px;
+  vertical-align: middle;
+}
+#quick-explorer span::before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
 }
 #quick-explorer span:not(.explorable-separator) {
   min-width: 50px;
@@ -2529,6 +2544,10 @@ body:not(.pane-relief-disable-counts) .view-header-nav-buttons :is(button.clicka
 
 .w-3.h-3.rounded-full.bg-brand {
   height: 0.75rem !important;
+}
+
+.smtcmp-apply-view .view-header div {
+  flex: 1;
 }
 
 .style-settings-heading[data-level="0"] + .style-settings-container {
@@ -4606,7 +4625,7 @@ body:is(.inherit, .dtm08) .workspace-leaf-resize-handle:hover {
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.9333333333);
 }
 
-.dtm08:not(.win7bar) .titlebar-button-container.mod-right .titlebar-button, .dtm08.stackTabs .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header, .dtm08 :not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile .workspace-drawer-vault-switcher,
+.dtm08:not(.win7bar) .titlebar-button-container.mod-right .titlebar-button, .dtm08 :not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile .workspace-drawer-vault-switcher,
 .dtm08 :not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile .workspace-drawer-vault-actions .clickable-icon, .dtm08 .sidebar-toggle-button, .dtm08 :is(.view-header, .nav-header) :is(.view-header-nav-buttons, .nav-buttons-container, .view-actions) .clickable-icon, .dtm08 .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header, .dtm08 .workspace-tab-header-new-tab .clickable-icon {
   border: solid 1px #000;
   background: linear-gradient(var(--d8d7), var(--d8d9) 50%, var(--d8dA) 50%, var(--d8d9));
@@ -4620,6 +4639,19 @@ body:is(.inherit, .dtm08) .workspace-leaf-resize-handle:hover {
 .dtm08:not(.win7bar) .titlebar-button-container.mod-right .titlebar-button:not(:last-of-type), .dtm08 :not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile .workspace-drawer-vault-switcher:not(:last-of-type),
 .dtm08 :not(.is-mobile) .workspace-split.mod-left-split .workspace-sidedock-vault-profile .workspace-drawer-vault-actions .clickable-icon:not(:last-of-type), .dtm08 .sidebar-toggle-button:not(:last-of-type), .dtm08 :is(.view-header, .nav-header) :is(.view-header-nav-buttons, .nav-buttons-container, .view-actions) .clickable-icon:not(:last-of-type), .dtm08 .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header:not(:last-of-type), .dtm08 .workspace-tab-header-new-tab .clickable-icon:not(:last-of-type) {
   border-right: 0px;
+}
+
+.dtm08.stackTabs .mod-root .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header {
+  border: solid 1px #000;
+  background: linear-gradient(var(--d8d7), var(--d8d9) 50%, var(--d8dA) 50%, var(--d8d9));
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1333333333), 0 1px rgba(255, 255, 255, 0.0666666667);
+}
+.dtm08.stackTabs .mod-root .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header:hover {
+  background: linear-gradient(var(--d8d6), var(--d8d8) 50%, var(--d8d9) 50%, var(--d8d8));
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1333333333), 0 1px rgba(255, 255, 255, 0.0666666667);
+}
+.dtm08.stackTabs .mod-root .workspace-tab-header-container .workspace-tab-header-container-inner .workspace-tab-header:not(:last-of-type) {
+  border-bottom: 0px;
 }
 
 .dtm08 .modal.mod-settings .modal-content button {
