--- a/src/DTM08/_components.scss
+++ b/src/DTM08/_components.scss
@@ -49,6 +49,23 @@
 	}
 }
 
+%buttonArrayVert
+{
+	border: solid 1px #000;
+	background: linear-gradient(var(--d8d7), var(--d8d9) 50%, var(--d8dA) 50%, var(--d8d9));
+	box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; // 0 1px 5px #000;
+	&:hover
+	{
+		background: linear-gradient(var(--d8d6), var(--d8d8) 50%, var(--d8d9) 50%, var(--d8d8));
+		box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; //0 1px 8px 1px #000;
+		//z-index: 99;
+	}
+	&:not(:last-of-type)
+	{
+		border-bottom: 0px;
+	}
+}
+
 %settingsButton
 {
 	background: linear-gradient(to bottom, var(--d8d2) 0%, var(--d8d4) 50%, var(--d8d5) 50%, var(--d8d8) 100%);
