New fix for smart Composer

--- a/src/DTM08/sidebarButtons.scss
+++ b/src/DTM08/sidebarButtons.scss
@@ -45,7 +45,7 @@
 .workspace:not(.is-left-sidedock-open) .sidebar-toggle-button.mod-left
 {
 	border-right: 0px;
-	border-bottom-width: 1px;
+	//border-bottom-width: 1px;
 }
 
 }
