--- a/src/MicroMikeMinimal/plugin/smartComposer.sass
+++ b/src/MicroMikeMinimal/plugin/smartComposer.sass
@@ -1,3 +1,3 @@
-.smtcmp-apply-view
-	.view-header div
-		flex: 1
+.workspace-leaf-content .smtcmp-apply-view
+	.view-header .view-header-title-container .view-header-title
+		min-width: 50%
