--- a/src/DTM08/_components.scss
+++ b/src/DTM08/_components.scss
@@ -43,6 +43,12 @@
 		box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; //0 1px 8px 1px #000;
 		//z-index: 99;
 	}
+	&.is-active
+	{
+		background: linear-gradient(var(--d8d5), var(--d8d7) 50%, var(--d8d8) 50%, var(--d8d7));
+		box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; //0 1px 8px 1px #000;
+		//z-index: 99;
+	}
 	&:not(:last-of-type)
 	{
 		border-right: 0px;
@@ -57,6 +63,12 @@
 	&:hover
 	{
 		background: linear-gradient(var(--d8d6), var(--d8d8) 50%, var(--d8d9) 50%, var(--d8d8));
+		box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; //0 1px 8px 1px #000;
+		//z-index: 99;
+	}
+	&.is-active
+	{
+		background: linear-gradient(var(--d8d5), var(--d8d7) 50%, var(--d8d8) 50%, var(--d8d7));
 		box-shadow: inset 0 0 0 1px #fff2, 0 1px #fff1; //0 1px 8px 1px #000;
 		//z-index: 99;
 	}
@@ -108,4 +120,15 @@
 	border-bottom: 0px;
 	background: linear-gradient(var(--d8d7), var(--d8d9) 50%, var(--d8dA) 50%, var(--d8dC));
 	box-shadow: inset 0 0 0 1px #fff1, 0 0 0 1px #fff1;
+	&:hover
+	{
+		background: linear-gradient(var(--d8d5), var(--d8d7) 50%, var(--d8d9) 50%, var(--d8dB));
+    	box-shadow: inset 0 0 0 1px #fff1, 0 0 0 1px #fff1;
+	}
+	&.is-active
+	{
+		background: linear-gradient(var(--d8d4), var(--d8d6) 50%, var(--d8dA) 50%, var(--d8dC));
+		box-shadow: inset 0 0 0 1px #fff1, 0 0 0 1px #fff1;
+		text-shadow: 0 1px 3px #000e;
+	}
 }
