--- a/src/MicroMikeMinimal/plugin/smartComposer.sass
+++ b/src/MicroMikeMinimal/plugin/smartComposer.sass
@@ -1,3 +1,3 @@
-.workspace-leaf-content .smtcmp-apply-view
+.workspace-leaf-content #smtcmp-apply-view
 	.view-header .view-header-title-container .view-header-title
 		min-width: 50%
