new: no dynamic unloading, clickable-anywhere Readable Line Length

--- a/src/DTM08/_components.scss
+++ b/src/DTM08/_components.scss
@@ -127,7 +127,7 @@
 	}
 	&.is-active
 	{
-		background: linear-gradient(var(--d8d4), var(--d8d6) 50%, var(--d8dA) 50%, var(--d8dC));
+		background: linear-gradient(var(--d8d5), var(--d8d7) 50%, var(--d8d9) 50%, var(--d8dB));
 		box-shadow: inset 0 0 0 1px #fff1, 0 0 0 1px #fff1;
 		text-shadow: 0 1px 3px #000e;
 	}
