--- a/src/MicroMikeMinimal/index.sass
+++ b/src/MicroMikeMinimal/index.sass
@@ -12,15 +12,16 @@
 @use "cPreventVisCulling.sass"
 @use "cSidebarView.sass"
 @use "cNoAnimations.sass"
+@use "cTreeView-noCulling.sass"
 //@use "cNoAnimations_displayPopFix1.sass"
 @use "dropDown.sass"
 @use "dropdownBlender.sass"
 @use "editorDashboard.sass"
 @use "editorText.sass"
 @use "editorText-lineLength.sass"
+@use "editorText-noCulling.sass"
 @use "editorView.sass"
 @use "fileBrowser.sass"
-@use "fileBrowser_noCulling.sass"
 //@use "fileBrowser2.sass"
 @use "miniMode.sass"
 @use "outline.sass"
