--- a/src/MicroMikeMinimal/plugin/recentFiles.sass
+++ b/src/MicroMikeMinimal/plugin/recentFiles.sass
@@ -1,6 +1,12 @@
 .workspace-leaf-content[data-type="recent-files"]
 	.tree-item-spacer
 		display: none
-
+	.tree-item-inner
+		//margin-left: 20px
+		order: 2
+	.nav-file-tag
+		//margin-left: 20px
+		order: 1
 	.recent-files-file-delete
 		position: absolute
+		order: 0
