--- a/Snippets/sNoDynamicUnloading.css
+++ b/Snippets/sNoDynamicUnloading.css
@@ -2,9 +2,9 @@
 	No Dynamic Unloading
 	This snippet disables dynamic unloading on the text editor preview mode and sidebars. 
 	Why? The optimization has many problems.
-	* Twitchy, unpredictable scrolling.
-	* Trouble reaching the end of image-heavy files in preview mode.
-	* If elements of tree view are too small, the bottom of them won't render.
+	* Notes with a lot of image embeds tend to get stuck jumping backwards while scrolling.
+	* If you make tree elements unusually small, it's bad at adapting and tends to leave gaps like this.
+	* Twitchy, unpredictable scrolling, and micro-lag caused when loading/unloading elements.
 	If you're having trouble with things like this, it might make things easier to disable the optimization.
 
 	I'd like to extend support to the Codemirror source / live editor, but I haven't figured out how to circumvent it yet.
