--- a/src/MicroMikeMinimal/canvas.sass
+++ b/src/MicroMikeMinimal/canvas.sass
@@ -7,6 +7,14 @@ body
 		padding-right: 5px !important
 		p
 			font-size: 20px
+		&::before, &::after
+			display: none
+		.markdown-preview-sizer 
+			flex-direction: column
+			display: flex
+			align-content: center
+			justify-content: center
+
 
 .markdown-source-view.mod-inside-iframe > .cm-editor > .cm-scroller
 	padding-left: 5px !important
