--- a/src/MicroMikeMinimal/settingsDense.sass
+++ b/src/MicroMikeMinimal/settingsDense.sass
@@ -21,10 +21,12 @@
 						border-bottom: 0px
 	.vertical-tab-content
 		@include std.noPadding
-		padding-left: 5px
+		//padding-left: 5px
 	.setting-item
 		@include std.noPadding
 
+		padding-left: 5px
+		
 		border-top: 1px solid var(--levelLayer)
 
 		padding-top: 5px 
