--- a/src/MMStyler/zBevels.scss
+++ b/src/MMStyler/zBevels.scss
@@ -12,7 +12,7 @@ body
     --bevelStyleTreeItem_invert: inset -1px -1px var(--separatorColor);
 }
 
-body:not(.disableBevels):not(.dtm08):not(.factorio) {
+body:not(.disableBevels):not(.dtm08):not(.factorio):not(.prismic) {
 	--bevelStyleButton: inset -1px -1px var(--bevelDark1), inset 1px 1px var(--bevelBright2), inset -2px -2px var(--bevelDark2), inset 2px 2px var(--bevelBright1);
 	--bevelStyleContainer: inset -1px -1px var(--bevelBright1), inset 1px 1px var(--bevelDark2), inset -2px -2px var(--bevelBright2), inset 2px 2px var(--bevelDark1);
 	--bevelStyleContainerOuter:
@@ -25,7 +25,7 @@ body:not(.disableBevels):not(.dtm08):not(.factorio) {
 	-2px 2px var(--bevelBright2),
 	2px -2px var(--bevelBright2);
 }
-body:not(.disableBevels):not(.dtm08):not(.factorio)
+body:not(.disableBevels):not(.dtm08):not(.factorio):not(.prismic)
 {
 &.theme-dark
 {
